--- a/main.html
+++ b/main.html
@@ -18,11 +18,11 @@
     </tr>
     <tr>
       <td class="item">Tea</td>
-      <td class="prices">50</td>
+      <td class="price">50</td>
     </tr>
     <tr>
       <td class="item">Coffee</td>
-      <td class="prices">70</td>
+      <td class="price">70</td>
     </tr>
     <tr>
       <td class="item">Biscuits</td>
@@ -30,7 +30,7 @@
     </tr>
     <tr>
       <td class="item">Rice</td>
-      <td class="prices">130</td>
+      <td class="price">130</td>
     </tr>
     <tr>
       <td class="item">Milk</td>
